tests/baselines/reference/moduleExportWithExportPropertyAssignment3.errors.txt
a.js(4,17): error TS2339: Property 'toFixed' does not exist on type 'number | "string"'.
  Property 'toFixed' does not exist on type '"string"'.
a.js(5,16): error TS2339: Property 'toFixed' does not exist on type 'number | "string"'.
  Property 'toFixed' does not exist on type '"string"'.


==== a.js (2 errors) ====
    /// <reference path='./requires.d.ts' />
    var mod1 = require('./mod1')
    mod1.justExport.toFixed()
    mod1.bothBefore.toFixed() // error, 'toFixed' not on 'string | number'
                    ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type 'number | "string"'.
!!! error TS2339:   Property 'toFixed' does not exist on type '"string"'.
    mod1.bothAfter.toFixed() // error, 'toFixed' not on 'string | number'
                   ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type 'number | "string"'.
!!! error TS2339:   Property 'toFixed' does not exist on type '"string"'.
    mod1.justProperty.length
    
==== requires.d.ts (0 errors) ====
    declare var module: { exports: any };
    declare function require(name: string): any;
==== mod1.js (0 errors) ====
    /// <reference path='./requires.d.ts' />
    module.exports.bothBefore = 'string'
    module.exports = {
        justExport: 1,
        bothBefore: 2,
        bothAfter: 3,
    }
    module.exports.bothAfter = 'string'
    module.exports.justProperty = 'string'
    